@@ -139,6 +139,7 @@ extern Tcl_ObjCmdProc
     NsTclRegisterFastUrl2FileObjCmd,
     NsTclRegisterFilterObjCmd,
     NsTclRegisterProcObjCmd,
+    NsTclRegisterProxyObjCmd,
     NsTclRegisterTraceObjCmd,
     NsTclRegisterUrl2FileObjCmd,
     NsTclRequestAuthorizeObjCmd,
@@ -404,6 +405,7 @@ static Cmd servCmds[] = {
     {"ns_register_fasturl2file", NULL, NsTclRegisterFastUrl2FileObjCmd},
     {"ns_register_filter", NULL, NsTclRegisterFilterObjCmd},
     {"ns_register_proc", NULL, NsTclRegisterProcObjCmd},
+    {"ns_register_proxy", NULL, NsTclRegisterProxyObjCmd},
     {"ns_register_trace", NULL, NsTclRegisterTraceObjCmd},
     {"ns_register_url2file", NULL, NsTclRegisterUrl2FileObjCmd},
     {"ns_requestauthorize", NULL, NsTclRequestAuthorizeObjCmd},
